--- a/booth-features.html
+++ b/booth-features.html
@@ -4,39 +4,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore exhibitor booth packages for QELE 2026. From Basic to Platinum, find the perfect tier to showcase your institution and connect with 4,000+ attendees.">
-    <title>Exhibitor Booth Packages | QELE 2026</title>
+    <meta name="description" content="Compare exhibitor booth packages for Qatar's leading university fair. Explore pricing and features for Basic, Silver, Gold, and Platinum tiers to maximize your ROI at EduExpo Qatar.">
+    <title>Exhibitor Booth Tiers & Packages | University Fair | EduExpo Qatar</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "QATAR EDUCATION LEADERSHIP EXPO 2026 (QELE)",
-      "url": "/index.html",
-      "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
-      "sameAs": [
-        "https://twitter.com/qatarexpo2026",
-        "https://linkedin.com/company/qatarexpo2026",
-        "https://instagram.com/qatarexpo2026"
-      ],
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+974-7444-9111",
-        "contactType": "Customer Service",
-        "email": "partnerships@eduexpoqatar.com"
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Qatar Education Expo 2026",
+        "url": "/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "sameAs": [
+          "https://twitter.com/qatarexpo2026",
+          "https://linkedin.com/company/qatarexpo2026",
+          "https://instagram.com/qatarexpo2026"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+974-7444-9111",
+          "contactType": "Customer Service",
+          "email": "partnerships@eduexpoqatar.com"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "/index.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "For Exhibitors",
+          "item": "/why-exhibit.html"
+        },{
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Booth Features"
+        }]
       }
-    }
+    ]
     </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="QELE 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -91,7 +112,7 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Booth Packages</h1>
+                <h1>Booth Features</h1>
                 <p>Choose your tier and establish your presence. Inquire for a detailed proposal.</p>
             </div>
         </section>
@@ -175,7 +196,7 @@
                 </div>
 
                 <div class="urgency-cta-section">
-                   <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.png" alt="QELE's owl mascot excitedly pointing to the limited early bird offer countdown." class="booth-features-mascot">
+                   <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.png" alt="Qatar Education Expo's owl mascot excitedly pointing to the limited early bird offer countdown." class="booth-features-mascot">
                     <h3><i class="fas fa-fire-alt"></i> Limited Prime Booths & Early Bird Offer!</h3>
                     <p>Don't miss out! Secure your prime location and early bird discount before it's too late!</p>
                     <div class="prime-booth-counter">
@@ -211,7 +232,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="QELE 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -256,7 +277,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QELE. All Rights Reserved.</p>
+                <p>&copy; 2024 Qatar Education Expo. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
