--- a/about.html
+++ b/about.html
@@ -1,42 +1,59 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Discover why Qatar is the education hub of the Gulf. Learn about the $100B+ MENA education market and the opportunities at QELE 2026 for institutions and innovators.">
-    <title>About The Expo | $100B MENA Market | QELE 2026</title>
+    <meta name="description" content="Discover why Qatar Education Expo is the leading Gulf education exhibition and international university fair. Learn about opportunities to study abroad in the Middle East (study in UK, study in Canada) and connect with the thriving GCC education market at this premier student recruitment fair.">
+    <title>About Qatar's Premier Education Expo | Study Abroad Middle East | Gulf Education Exhibition</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "QATAR EDUCATION LEADERSHIP EXPO 2026 (QELE)",
-      "url": "/index.html",
-      "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
-      "sameAs": [
-        "https://twitter.com/qatarexpo2026",
-        "https://linkedin.com/company/qatarexpo2026",
-        "https://instagram.com/qatarexpo2026"
-      ],
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+974-7444-9111",
-        "contactType": "Customer Service",
-        "email": "partnerships@eduexpoqatar.com"
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Qatar Education Expo 2026",
+        "url": "/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.webp",
+        "sameAs": [
+          "https://twitter.com/qatarexpo2026",
+          "https://linkedin.com/company/qatarexpo2026",
+          "https://instagram.com/qatarexpo2026"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+974-7444-9111",
+          "contactType": "Customer Service",
+          "email": "partnerships@eduexpoqatar.com"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "/index.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "About Expo"
+        }]
       }
-    }
+    ]
     </script>
 </head>
 <body class="about-page">
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="QELE 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -91,14 +108,14 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>A $100 Billion Education Market on the Rise</h1>
+                <h1>Qatar's Premier Education Expo & International University Fair</h1>
                 <p>Position your institution at the forefront of a rapidly growing, high-demand region.</p>
             </div>
         </section>
 
         <section id="about-expo">
             <div class="container">
-                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076631/owl-experience_wn76zs.png" alt="QELE's owl mascot pointing at the market opportunity statistics." class="market-mascot">
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076631/owl-experience_wn76zs.webp" alt="Qatar Education Expo's owl mascot pointing at the market opportunity statistics." class="market-mascot">
                  <!-- Market Opportunity -->
                 <div id="market-opportunity">
                     <div class="market-opportunity-grid">
@@ -139,7 +156,7 @@
                             </ul>
                         </div>
                         <div class="why-qatar-image">
-                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761513137/1566019-2960x1920-desktop-hd-doha-qatar-background-photo_zxpe8d.jpg" alt="Doha Skyline">
+                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761513137/1566019-2960x1920-desktop-hd-doha-qatar-background-photo_zxpe8d.webp" alt="Stunning modern skyline of Doha, Qatar at dusk.">
                         </div>
                     </div>
                 </div>
@@ -151,7 +168,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="QELE 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -196,7 +213,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QELE. All Rights Reserved.</p>
+                <p>&copy; 2024 Qatar Education Expo. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
