--- a/booth-features.html
+++ b/booth-features.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,7 +19,7 @@
         "@type": "Organization",
         "name": "Qatar Education Expo 2026",
         "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.webp",
         "sameAs": [
           "https://twitter.com/qatarexpo2026",
           "https://linkedin.com/company/qatarexpo2026",
@@ -57,7 +58,7 @@
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -112,8 +113,8 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Booth Features</h1>
-                <p>Choose your tier and establish your presence. Inquire for a detailed proposal.</p>
+                <h1>Exhibitor Booth Packages & Features</h1>
+                <p>Choose your tier, establish your presence, and connect with the future of education in the MENA region.</p>
             </div>
         </section>
         
@@ -196,7 +197,7 @@
                 </div>
 
                 <div class="urgency-cta-section">
-                   <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.png" alt="Qatar Education Expo's owl mascot excitedly pointing to the limited early bird offer countdown." class="booth-features-mascot">
+                   <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.webp" alt="Qatar Education Expo's owl mascot excitedly pointing to the limited early bird offer countdown." class="booth-features-mascot">
                     <h3><i class="fas fa-fire-alt"></i> Limited Prime Booths & Early Bird Offer!</h3>
                     <p>Don't miss out! Secure your prime location and early bird discount before it's too late!</p>
                     <div class="prime-booth-counter">
@@ -232,7 +233,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
