--- a/booth-registration.html
+++ b/booth-registration.html
@@ -1,11 +1,12 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Book your exhibitor booth for QELE 2026. Secure your space at MENA's premier education event and connect with students, parents, and industry leaders.">
-    <title>Exhibitor Booth Registration | QELE 2026</title>
+    <meta name="description" content="Book your exhibitor booth for Qatar Education Expo 2026, the premier university expo in the GCC. Secure your space at MENA's leading student recruitment fair and connect with students, parents, and industry leaders.">
+    <title>Book Your Booth | Exhibitor Registration | Qatar Education Expo 2026</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,31 +20,52 @@
 }
 </script>
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "QATAR EDUCATION LEADERSHIP EXPO 2026 (QELE)",
-      "url": "/index.html",
-      "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
-      "sameAs": [
-        "https://twitter.com/qatarexpo2026",
-        "https://linkedin.com/company/qatarexpo2026",
-        "https://instagram.com/qatarexpo2026"
-      ],
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+974-7444-9111",
-        "contactType": "Customer Service",
-        "email": "partnerships@eduexpoqatar.com"
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Qatar Education Expo 2026",
+        "url": "/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.webp",
+        "sameAs": [
+          "https://twitter.com/qatarexpo2026",
+          "https://linkedin.com/company/qatarexpo2026",
+          "https://instagram.com/qatarexpo2026"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+974-7444-9111",
+          "contactType": "Customer Service",
+          "email": "partnerships@eduexpoqatar.com"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "/index.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "For Exhibitors",
+          "item": "/why-exhibit.html"
+        },{
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Book Your Booth"
+        }]
       }
-    }
+    ]
     </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="QELE 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -97,7 +119,7 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Exhibitor Registration</h1>
+                <h1>Book Your Booth</h1>
                 <p>Secure your space at MENA's premier education event.</p>
             </div>
         </section>
@@ -110,7 +132,7 @@
                 <div id="booth-form-success" style="display: none; background: var(--white); padding: 2.5rem; border-radius: 10px; border: 1px solid var(--border-color); text-align: center;">
                      <i class="fas fa-check-circle" style="font-size: 3rem; color: #4db6ac; margin-bottom: 1rem;" aria-hidden="true"></i>
                      <h3>Thank You for Your Interest!</h3>
-                     <p>Your registration inquiry has been successfully submitted. Our partnership team will review your information and contact you shortly to finalize your booking. We are excited about the possibility of having you at QELE 2026!</p>
+                     <p>Your registration inquiry has been successfully submitted. Our partnership team will review your information and contact you shortly to finalize your booking. We are excited about the possibility of having you at Qatar Education Expo 2026!</p>
                      <a href="index.html" class="btn btn-primary" style="margin-top: 1rem;">Back to Home</a>
                 </div>
 
@@ -120,14 +142,14 @@
                     <input type="hidden" name="form_source" value="Exhibitor Registration">
                     
                     <div class="form-group">
-                        <label for="form-booth-name"><span lang="en">Full Name</span> - <span lang="ar">الاسم الكامل</span> *</label>
+                        <label for="form-booth-name">Full Name *</label>
                         <input type="text" id="form-booth-name" name="name" required>
                         <div class="error-message"></div>
                     </div>
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="form-booth-country"><span lang="en">Country</span> - <span lang="ar">الدولة</span> *</label>
+                            <label for="form-booth-country">Country *</label>
                             <select id="form-booth-country" name="country" required>
                                 <option value="" disabled selected>Select country</option>
                                 <option value="Qatar">Qatar</option>
@@ -143,7 +165,7 @@
                             <div class="error-message"></div>
                         </div>
                         <div class="form-group">
-                            <label for="form-booth-phone"><span lang="en">Mobile number</span> - <span lang="ar">رقم الجوال</span> *</label>
+                            <label for="form-booth-phone">Mobile number *</label>
                             <input type="tel" id="form-booth-phone" name="phone" required>
                             <div class="error-message"></div>
                         </div>
@@ -151,7 +173,7 @@
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="form-booth-email"><span lang="en">Email</span> - <span lang="ar">البريد الالكتروني</span> *</label>
+                            <label for="form-booth-email">Email *</label>
                             <input type="email" id="form-booth-email" name="email" required>
                             <div class="error-message"></div>
                         </div>
@@ -164,28 +186,28 @@
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="form-booth-company"><span lang="en">Company</span> - <span lang="ar">الشركة</span> *</label>
+                            <label for="form-booth-company">Company *</label>
                             <input type="text" id="form-booth-company" name="company" required>
                             <div class="error-message"></div>
                         </div>
                         <div class="form-group">
-                            <label for="form-booth-title"><span lang="en">Position</span> - <span lang="ar">المنصب</span> *</label>
+                            <label for="form-booth-title">Position *</label>
                             <input type="text" id="form-booth-title" name="job_title" required>
                             <div class="error-message"></div>
                         </div>
                     </div>
 
                     <div class="form-group">
-                        <label for="form-booth-company-field"><span lang="en">Company field</span> - <span lang="ar">مجال الشركة</span> *</label>
+                        <label for="form-booth-company-field">Company field *</label>
                         <select id="form-booth-company-field" name="company_field" required>
                             <option value="" disabled selected>Please select an option</option>
-                            <option value="Colleges, universities, institutes and schools">Colleges, universities, institutes and schools - الكليات، الجامعات، المعاهد والمدارس</option>
-                            <option value="Educational service">Educational service - الخدمات التعليمية</option>
-                            <option value="Edutainment program">Edutainment program - برامج التعليم بالترفيه</option>
-                            <option value="Educational consulting">Educational consulting - الاستشارات التعليمية</option>
-                            <option value="Education technology">Education technology - تكنولوجيا التعليم</option>
-                            <option value="Educational Equipment">Educational Equipment - ادوات التعليم</option>
-                            <option value="Other">Other - اخرى</option>
+                            <option value="Colleges, universities, institutes and schools">Colleges, universities, institutes and schools</option>
+                            <option value="Educational service">Educational service</option>
+                            <option value="Edutainment program">Edutainment program</option>
+                            <option value="Educational consulting">Educational consulting</option>
+                            <option value="Education technology">Education technology</option>
+                            <option value="Educational Equipment">Educational Equipment</option>
+                            <option value="Other">Other</option>
                         </select>
                         <div class="error-message"></div>
                     </div>
@@ -221,21 +243,21 @@
                     </div>
                     <div class="form-group form-group-consent">
                         <input type="checkbox" id="form-booth-consent" name="consent" required>
-                        <label for="form-booth-consent">I understand this is a registration of interest and not a final booking. A member of the QELE team will contact me to complete the process. *</label>
+                        <label for="form-booth-consent">I understand this is a registration of interest and not a final booking. A member of the Qatar Education Expo team will contact me to complete the process. *</label>
                         <div class="error-message"></div>
                     </div>
                     <button type="submit" class="btn btn-primary" style="width: 100%; font-size: 1.2rem; padding: 15px;">Submit Registration</button>
                 </form>
             </div>
         </section>
-        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.png" alt="QELE's owl mascot holding a sign, guiding visitors to the exhibitor registration form." class="booth-reg-mascot">
+        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.webp" alt="Qatar Education Expo's owl mascot holding a sign, guiding visitors to the exhibitor registration form." class="booth-reg-mascot">
     </main>
 
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="QELE 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -280,7 +302,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QELE. All Rights Reserved.</p>
+                <p>&copy; 2024 Qatar Education Expo. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
