--- a/booth-registration.html
+++ b/booth-registration.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,7 +25,7 @@
         "@type": "Organization",
         "name": "Qatar Education Expo 2026",
         "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.webp",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
         "sameAs": [
           "https://twitter.com/qatarexpo2026",
           "https://linkedin.com/company/qatarexpo2026",
@@ -65,7 +64,7 @@
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -250,14 +249,14 @@
                 </form>
             </div>
         </section>
-        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.webp" alt="Qatar Education Expo's owl mascot holding a sign, guiding visitors to the exhibitor registration form." class="booth-reg-mascot">
+        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.png" alt="Qatar Education Expo's owl mascot holding a sign, guiding visitors to the exhibitor registration form." class="booth-reg-mascot">
     </main>
 
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
