--- a/about.html
+++ b/about.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,7 +18,7 @@
         "@type": "Organization",
         "name": "Qatar Education Expo 2026",
         "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.webp",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
         "sameAs": [
           "https://twitter.com/qatarexpo2026",
           "https://linkedin.com/company/qatarexpo2026",
@@ -53,7 +52,7 @@
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -115,7 +114,7 @@
 
         <section id="about-expo">
             <div class="container">
-                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076631/owl-experience_wn76zs.webp" alt="Qatar Education Expo's owl mascot pointing at the market opportunity statistics." class="market-mascot">
+                <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076631/owl-experience_wn76zs.png" alt="Qatar Education Expo's owl mascot pointing at the market opportunity statistics." class="market-mascot">
                  <!-- Market Opportunity -->
                 <div id="market-opportunity">
                     <div class="market-opportunity-grid">
@@ -156,7 +155,7 @@
                             </ul>
                         </div>
                         <div class="why-qatar-image">
-                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761513137/1566019-2960x1920-desktop-hd-doha-qatar-background-photo_zxpe8d.webp" alt="Stunning modern skyline of Doha, Qatar at dusk.">
+                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761513137/1566019-2960x1920-desktop-hd-doha-qatar-background-photo_zxpe8d.jpg" alt="Stunning modern skyline of Doha, Qatar at dusk.">
                         </div>
                     </div>
                 </div>
@@ -168,7 +167,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
