--- a/workshops.html
+++ b/workshops.html
@@ -1,22 +1,63 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agenda - QELE 2026</title>
+    <meta name="description" content="Explore the full event agenda for the Qatar Education Expo 2026. Discover a two-day schedule of keynotes, panels, and workshops on AI, EdTech, and the future of learning.">
+    <title>Full Event Agenda | Qatar Education Expo 2026 Conference</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <script type="application/ld+json">
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "EduExpo Qatar 2026",
+        "url": "/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "sameAs": [
+          "https://twitter.com/qatarexpo2026",
+          "https://linkedin.com/company/qatarexpo2026",
+          "https://instagram.com/qatarexpo2026"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+974-7444-9111",
+          "contactType": "Customer Service",
+          "email": "partnerships@eduexpoqatar.com"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "/index.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Visit",
+          "item": "/why-attend.html"
+        },{
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Agenda"
+        }]
+      }
+    ]
+    </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="QELE 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="EduExpo Qatar 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -71,7 +112,7 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Event Agenda</h1>
+                <h1>Agenda</h1>
                 <p>April 19–20, 2026 | Sheraton Grand Doha Resort & Convention Hotel</p>
             </div>
         </section>
@@ -210,7 +251,7 @@
                     <div class="content-card"><h3><i class="fas fa-user-tie"></i>Leadership Lounge – The Boardroom of Education</h3></div>
                     <div class="content-card"><h3><i class="fas fa-flask"></i>Student Innovation Fair / Showcase</h3></div>
                     <div class="content-card admission-zone-card">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761916444/Blue_Bold_Office_Idea_Logo_50_x_50_px_29_dru4pr.png" alt="QELE Mascot" class="agenda-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761916444/Blue_Bold_Office_Idea_Logo_50_x_50_px_29_dru4pr.png" alt="EduExpo Qatar's owl mascot pointing towards the Career & University Admission Zone highlight." class="agenda-mascot">
                         <h3><i class="fas fa-graduation-cap"></i>Career &amp; University Admission Zone</h3>
                     </div>
                     <div class="content-card"><h3><i class="fas fa-file-invoice"></i>Recruitment & CV Booth</h3></div>
@@ -232,7 +273,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="QELE 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="EduExpo Qatar 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -277,7 +318,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QELE. All Rights Reserved.</p>
+                <p>&copy; 2024 EduExpo Qatar. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
