--- a/sponsorship-tiers.html
+++ b/sponsorship-tiers.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Partner with the Gulf's leading education exhibition. Submit your sponsorship inquiry for Qatar Education Expo 2026 to elevate your brand and connect with key decision-makers.">
-    <title>Sponsor the Leading Education Exhibition | Qatar Education Expo 2026</title>
+    <meta name="description" content="Sponsor the leading education exhibition in the Gulf. Submit your sponsorship inquiry for Qatar Education Expo 2026 and connect with decision-makers in the MENA education market.">
+    <title>Become a Sponsor | Qatar Education Expo 2026 Sponsorship</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
