--- a/school-group-registration.html
+++ b/school-group-registration.html
@@ -141,7 +141,7 @@
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="form-school-contact-name">Contact Person Name (Teacher/Counselor) *</label>
+                            <label for="form-school-contact-name">Contact Person Name*</label>
                             <input type="text" id="form-school-contact-name" name="contact_name" required>
                             <div class="error-message"></div>
                         </div>
