--- a/brand-exposure.html
+++ b/brand-exposure.html
@@ -1,42 +1,66 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Amplify your brand's reach to over 1 million impressions with QELE 2026. Explore our 360° marketing ecosystem for sponsors and exhibitors in the MENA region.">
-    <title>Sponsor & Exhibitor Brand Exposure | QELE 2026</title>
+    <meta name="description" content="Amplify your brand's reach to over 1 million impressions at the premier Gulf Education Exhibition, Qatar Education Expo 2026. Explore our 360° marketing ecosystem for sponsors and exhibitors in the MENA region.">
+    <title>Sponsor & Exhibitor Brand Exposure | Gulf Education Exhibition | Qatar Education Expo 2026</title>
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="alternate" hreflang="en-QA" href="/brand-exposure.html" />
+    <link rel="alternate" hreflang="ar-QA" href="/ar/brand-exposure.html" />
+    <link rel="alternate" hreflang="x-default" href="/brand-exposure.html" />
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "QATAR EDUCATION LEADERSHIP EXPO 2026 (QELE)",
-      "url": "/index.html",
-      "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
-      "sameAs": [
-        "https://twitter.com/qatarexpo2026",
-        "https://linkedin.com/company/qatarexpo2026",
-        "https://instagram.com/qatarexpo2026"
-      ],
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+974-7444-9111",
-        "contactType": "Customer Service",
-        "email": "partnerships@eduexpoqatar.com"
+    [
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Qatar Education Expo 2026",
+        "url": "/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png",
+        "sameAs": [
+          "https://twitter.com/qatarexpo2026",
+          "https://linkedin.com/company/qatarexpo2026",
+          "https://instagram.com/qatarexpo2026"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+974-7444-9111",
+          "contactType": "Customer Service",
+          "email": "partnerships@eduexpoqatar.com"
+        }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [{
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "/index.html"
+        },{
+          "@type": "ListItem",
+          "position": 2,
+          "name": "For Sponsors",
+          "item": "/sponsorship-tiers.html"
+        },{
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Brand Exposure"
+        }]
       }
-    }
+    ]
     </script>
 </head>
 <body>
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="QELE 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761210698/logo500x250_i8opbv.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -79,6 +103,11 @@
                         </ul>
                     </li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
+                    <li class="language-switcher">
+                        <a href="#" class="nav-link lang-active" onclick="return false;">English</a>
+                        <span class="lang-separator">|</span>
+                        <a href="#" class="nav-link" onclick="alert('Arabic version coming soon!'); return false;" lang="ar">العربية</a>
+                    </li>
                 </ul>
             </nav>
             <div class="header-ctas">
@@ -92,7 +121,7 @@
         <section class="page-header">
             <div class="container">
                 <h1>Your Gateway to 1 Million+ Engaged Minds</h1>
-                <p>Amplify your brand across the MENA education ecosystem with QELE's unparalleled multi-channel reach.</p>
+                <p>Amplify your brand across the MENA education ecosystem with Qatar Education Expo's unparalleled multi-channel reach.</p>
             </div>
         </section>
         
@@ -118,7 +147,7 @@
                         <p>Engaged Attendees</p>
                     </div>
                     <div class="stat-card countries-card-with-mascot">
-                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.png" alt="QELE's owl mascot flying over country statistics, illustrating global reach." class="brand-exposure-mascot">
+                        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076632/Untitled_design_-_2025-11-02T150232.925_lhutvk.png" alt="Qatar Education Expo's owl mascot flying over country statistics, illustrating global reach." class="brand-exposure-mascot">
                         <i class="fas fa-globe-americas"></i>
                         <h4>25+</h4>
                         <p>Countries Reached</p>
@@ -134,28 +163,28 @@
                 <p class="subtitle">Our attendees are engaged, influential, and ready to discover the future of education. Here's who you'll meet.</p>
                 <div class="audience-grid">
                     <div class="audience-card">
-                        <img src="https://images.pexels.com/photos/267885/pexels-photo-267885.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Ambitious Student" class="audience-avatar">
+                        <img src="https://images.pexels.com/photos/267885/pexels-photo-267885.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Photo of an ambitious student smiling and looking towards their future." class="audience-avatar">
                         <div class="audience-card-content">
                             <h4><i class="fas fa-user-graduate"></i> The Ambitious Student</h4>
                             <p>Grades 11-12, actively researching international universities and career paths. Tech-savvy and future-focused.</p>
                         </div>
                     </div>
                     <div class="audience-card">
-                         <img src="https://t4.ftcdn.net/jpg/05/54/83/25/360_F_554832500_UfI2avKcQrqflj4jYVeohtaYxU3KtJuf.jpg" alt="Involved Parent" class="audience-avatar">
+                         <img src="https://t4.ftcdn.net/jpg/05/54/83/25/360_F_554832500_UfI2avKcQrqflj4jYVeohtaYxU3KtJuf.jpg" alt="Photo of a supportive parent discussing educational options with their child." class="audience-avatar">
                         <div class="audience-card-content">
                             <h4><i class="fas fa-user-friends"></i> The Involved Parent</h4>
                             <p>Key decision-makers in their child's education, seeking information on admissions, scholarships, and student life.</p>
                         </div>
                     </div>
                     <div class="audience-card">
-                        <img src="https://t3.ftcdn.net/jpg/08/02/97/04/360_F_802970478_jM4VJvvYd8G6x0z9h8el4j0Fkl5rgnQd.jpg" alt="School Principal" class="audience-avatar">
+                        <img src="https://t3.ftcdn.net/jpg/08/02/97/04/360_F_802970478_jM4VJvvYd8G6x0z9h8el4j0Fkl5rgnQd.jpg" alt="Photo of a professional school principal in a modern school environment." class="audience-avatar">
                         <div class="audience-card-content">
                             <h4><i class="fas fa-user-tie"></i> The School Principal</h4>
                             <p>Leaders from top K-12 schools, looking for innovative EdTech solutions and university partnerships.</p>
                         </div>
                     </div>
                     <div class="audience-card">
-                        <img src="https://t4.ftcdn.net/jpg/12/75/32/57/360_F_1275325717_3PiY3mrtbsnhSrKtJca2PEDR2SL5QaQ8.jpg" alt="Education Professional" class="audience-avatar">
+                        <img src="https://t4.ftcdn.net/jpg/12/75/32/57/360_F_1275325717_3PiY3mrtbsnhSrKtJca2PEDR2SL5QaQ8.jpg" alt="Photo of an education professional networking at a conference." class="audience-avatar">
                         <div class="audience-card-content">
                             <h4><i class="fas fa-briefcase"></i> The Education Professional</h4>
                             <p>Consultants, counselors, and ministry officials exploring trends and forging strategic alliances.</p>
@@ -180,10 +209,10 @@
 
                     <div class="exposure-content-panels">
                         <div id="pre-event" class="exposure-content active pre-event-panel-with-mascot">
-                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076631/owl-tech.2_qxwqmx.png" alt="QELE's owl mascot with a laptop, representing the pre-event digital marketing campaign." class="pre-event-mascot">
+                            <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762076631/owl-tech.2_qxwqmx.png" alt="Qatar Education Expo's owl mascot with a laptop, representing the pre-event digital marketing campaign." class="pre-event-mascot">
                             <h3>Build Momentum, Generate Leads</h3>
                             <div class="exposure-panel-grid">
-                                <div class="exposure-benefit-item"><i class="fas fa-globe"></i> <h4>Website Feature</h4> <p>Logo and link on the official QELE website.</p></div>
+                                <div class="exposure-benefit-item"><i class="fas fa-globe"></i> <h4>Website Feature</h4> <p>Logo and link on the official Qatar Education Expo website.</p></div>
                                 <div class="exposure-benefit-item"><i class="fab fa-linkedin"></i> <h4>Social Media Spotlight</h4> <p>Dedicated posts across LinkedIn, Instagram, and Twitter.</p></div>
                                 <div class="exposure-benefit-item"><i class="fas fa-envelope-open-text"></i> <h4>Email Campaigns</h4> <p>Inclusion in newsletters to 50,000+ subscribers.</p></div>
                                 <div class="exposure-benefit-item"><i class="fas fa-bullhorn"></i> <h4>Press Releases</h4> <p>Your brand mentioned in official media announcements.</p></div>
@@ -208,7 +237,7 @@
                                 <div class="exposure-benefit-item"><i class="fas fa-film"></i> <h4>Highlight Videos</h4> <p>Your brand and booth featured in official event recap videos.</p></div>
                                 <div class="exposure-benefit-item"><i class="fas fa-chart-bar"></i> <h4>Post-Event Report</h4> <p>Logo and acknowledgment in the report sent to all stakeholders.</p></div>
                                 <div class="exposure-benefit-item"><i class="fas fa-envelope"></i> <h4>"Thank You" Emails</h4> <p>Your logo included in post-event communications to all attendees.</p></div>
-                                <div class="exposure-benefit-item"><i class="fas fa-share-alt"></i> <h4>Social Media Recap</h4> <p>Tags and mentions in our "Best of QELE 2026" social campaigns.</p></div>
+                                <div class="exposure-benefit-item"><i class="fas fa-share-alt"></i> <h4>Social Media Recap</h4> <p>Tags and mentions in our "Best of Qatar Education Expo 2026" social campaigns.</p></div>
                                 <div class="exposure-benefit-item"><i class="fas fa-archive"></i> <h4>Content Archive</h4> <p>Branding on recorded sessions and materials hosted on our website.</p></div>
                                 <div class="exposure-benefit-item"><i class="fas fa-calendar-check"></i> <h4>Early Access 2027</h4> <p>Priority booking and early bird rates for the next edition.</p></div>
                             </div>
@@ -236,7 +265,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="QELE 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1761223357/logo-white_1_pqcaph.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -281,7 +310,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 QELE. All Rights Reserved.</p>
+                <p>&copy; 2024 Qatar Education Expo. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
