--- a/booth-registration.html
+++ b/booth-registration.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="alternate" hreflang="en-QA" href="/booth-registration.html" />
+    <link rel="alternate" hreflang="ar-QA" href="/ar/booth-registration.html" />
+    <link rel="alternate" hreflang="x-default" href="/booth-registration.html" />
 <script type="importmap">
 {
   "imports": {
@@ -106,6 +109,11 @@
                         </ul>
                     </li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
+                    <li class="language-switcher">
+                        <a href="#" class="nav-link lang-active" onclick="return false;">English</a>
+                        <span class="lang-separator">|</span>
+                        <a href="#" class="nav-link" onclick="alert('Arabic version coming soon!'); return false;" lang="ar">العربية</a>
+                    </li>
                 </ul>
             </nav>
             <div class="header-ctas">
