--- a/brand-exposure.html
+++ b/brand-exposure.html
@@ -6,14 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Amplify your brand's reach to over 1 million impressions at the premier Gulf Education Exhibition, Qatar Education Expo 2026. Explore our 360° marketing ecosystem for sponsors and exhibitors in the MENA region.">
     <title>Sponsor & Exhibitor Brand Exposure | Gulf Education Exhibition | Qatar Education Expo 2026</title>
+    <link rel="canonical" href="https://eduexpoqatar.com/brand-exposure.html" />
+    <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/brand-exposure.html" />
+    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/brand-exposure.html" />
+    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/brand-exposure.html" />
+    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/brand-exposure.html" />
+    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/brand-exposure.html" />
+    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/brand-exposure.html" />
+    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/brand-exposure.html" />
+    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/brand-exposure.html" />
+    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/brand-exposure.html" />
+    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/brand-exposure.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/brand-exposure.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="alternate" hreflang="en-QA" href="/brand-exposure.html" />
-    <link rel="alternate" hreflang="ar-QA" href="/ar/brand-exposure.html" />
-    <link rel="alternate" hreflang="x-default" href="/brand-exposure.html" />
     <script type="application/ld+json">
     [
       {
@@ -103,11 +112,6 @@
                         </ul>
                     </li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li class="language-switcher">
-                        <a href="#" class="nav-link lang-active" onclick="return false;">English</a>
-                        <span class="lang-separator">|</span>
-                        <a href="#" class="nav-link" onclick="alert('Arabic version coming soon!'); return false;" lang="ar">العربية</a>
-                    </li>
                 </ul>
             </nav>
             <div class="header-ctas">
