--- a/career-counselling.html
+++ b/career-counselling.html
@@ -6,14 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get expert guidance to study abroad at our global education expo. We offer specialized advice for students looking to study in the UK, study in Canada, and other top destinations from Qatar at this premier international education fair.">
     <title>Free Study Abroad Guidance | Study in UK & Canada | Gulf Education Exhibition</title>
+    <link rel="canonical" href="https://eduexpoqatar.com/career-counselling.html" />
+    <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/career-counselling.html" />
+    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/career-counselling.html" />
+    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/career-counselling.html" />
+    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/career-counselling.html" />
+    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/career-counselling.html" />
+    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/career-counselling.html" />
+    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/career-counselling.html" />
+    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/career-counselling.html" />
+    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/career-counselling.html" />
+    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/career-counselling.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/career-counselling.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="alternate" hreflang="en-QA" href="/career-counselling.html" />
-    <link rel="alternate" hreflang="ar-QA" href="/ar/career-counselling.html" />
-    <link rel="alternate" hreflang="x-default" href="/career-counselling.html" />
     <script type="application/ld+json">
     [
       {
@@ -103,11 +112,6 @@
                         </ul>
                     </li>
                     <li><a href="contact.html" class="nav-link">Contact</a></li>
-                    <li class="language-switcher">
-                        <a href="#" class="nav-link lang-active" onclick="return false;">English</a>
-                        <span class="lang-separator">|</span>
-                        <a href="#" class="nav-link" onclick="alert('Arabic version coming soon!'); return false;" lang="ar">العربية</a>
-                    </li>
                 </ul>
             </nav>
             <div class="header-ctas">
