--- a/school-group-registration.html
+++ b/school-group-registration.html
@@ -1,11 +1,23 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Register your school for a complimentary group visit to the Qatar Education Expo 2026. An unmissable opportunity for students to explore top international universities and future career paths.">
     <title>School Group Registration | Qatar Education Fair 2026</title>
+    <link rel="canonical" href="https://eduexpoqatar.com/school-group-registration.html" />
+    <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/school-group-registration.html" />
+    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/school-group-registration.html" />
+    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/school-group-registration.html" />
+    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/school-group-registration.html" />
+    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/school-group-registration.html" />
+    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/school-group-registration.html" />
+    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/school-group-registration.html" />
+    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/school-group-registration.html" />
+    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/school-group-registration.html" />
+    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/school-group-registration.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/school-group-registration.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -141,7 +153,7 @@
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="form-school-contact-name">Contact Person Name*</label>
+                            <label for="form-school-contact-name">Contact Person Name (Teacher/Counselor) *</label>
                             <input type="text" id="form-school-contact-name" name="contact_name" required>
                             <div class="error-message"></div>
                         </div>
