--- a/speaker-registration.html
+++ b/speaker-registration.html
@@ -1,11 +1,23 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Share your expertise at the Qatar Education Expo 2026. We invite leaders in education and technology to apply to speak at the premier education conference in the GCC.">
     <title>Apply to Speak | Qatar Education Conference 2026 Speaker Registration</title>
+    <link rel="canonical" href="https://eduexpoqatar.com/speaker-registration.html" />
+    <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/speaker-registration.html" />
+    <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/speaker-registration.html" />
+    <link rel="alternate" hreflang="en-SA" href="https://eduexpoqatar.com/speaker-registration.html" />
+    <link rel="alternate" hreflang="en-AE" href="https://eduexpoqatar.com/speaker-registration.html" />
+    <link rel="alternate" hreflang="en-KW" href="https://eduexpoqatar.com/speaker-registration.html" />
+    <link rel="alternate" hreflang="en-BH" href="https://eduexpoqatar.com/speaker-registration.html" />
+    <link rel="alternate" hreflang="en-OM" href="https://eduexpoqatar.com/speaker-registration.html" />
+    <link rel="alternate" hreflang="en-GB" href="https://eduexpoqatar.com/speaker-registration.html" />
+    <link rel="alternate" hreflang="en-CA" href="https://eduexpoqatar.com/speaker-registration.html" />
+    <link rel="alternate" hreflang="en-US" href="https://eduexpoqatar.com/speaker-registration.html" />
+    <link rel="alternate" hreflang="x-default" href="https://eduexpoqatar.com/speaker-registration.html" />
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
